Cambiado color modal tecnoligias y fondo estilo cristal.

--- a/src/app/components/tecnologias/modal/modal.component.html
+++ b/src/app/components/tecnologias/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="mw-300 mx-auto my-5" >
+<div class="lead mw-300 mx-auto my-5" >
   <div class="px-4 py-3">
     <button (click)="onCancel()" 
             class="btn-close position-absolute top-0 end-0 mt-2 me-2" 
@@ -8,7 +8,7 @@
       <img [src]="data.logoUrl" 
            alt="{{ data.nombre }} logo" 
            class="w-25 mx-auto d-block mb-3">
-      <h5 class="fw-bold text-primary mb-3">{{ data.nombre }}</h5>
+      <h5 class="fw-bold text-light mb-3">{{ data.nombre }}</h5>
     </div>
 
     <p class="lh-sm">
