Mejorada resolución logo principal

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="text-center mb-5">
-    <img (click)="scrollToTop()" src="assets/logo.png" class="img-fluid ampliar-logo">
+    <img (click)="scrollToTop()" src="assets/logo.png" class="img-fluid ampliar-logo" width="200">
     <p class="lead text-light">{{ englishActive() ? 'Developed in ' : 'Desarrollado en '}}<i class="fa-brands fa-angular"></i>{{ englishActive() ? ' by' : ' por'}}<br><a href="https://github.com/adrianssanz" class="text-decoration-none">github.com/adrianssanz</a></p>
     <div class="justify-content-center gap-5 d-flex d-lg-none mb-3">
         <a class="h2 text-light ampliar" href="mailto:sanzadrian@hotmail.es" target="_blank">
