--- a/src/app/components/tecnologias/tecnologias.component.html
+++ b/src/app/components/tecnologias/tecnologias.component.html
@@ -6,9 +6,9 @@
   </div>
   <div *ngIf="tecnologias && tecnologias.length > 0; else noTecnologias" class="w-80 m-auto text-light ">
     <div class="row w-75 m-auto text-light">
-      <div (click)="abrirModal(tecnologia.src, tecnologia.nombre, tecnologia.descripcion)"
+      <div (click)="abrirModal(tecnologia)"
         *ngFor="let tecnologia of tecnologias" class="col-6 col-md-3 col-lg-2 text-center mb-5 ampliar-logo">
-        <img [src]="tecnologia.src" [alt]="tecnologia.alt" class="img-fluid " style="max-height: 100px;">
+        <img [src]="'https://res.cloudinary.com/dtdfno067/image/upload/v1739718323/portfolio/tecnologias/' + tecnologia.alt" [alt]="tecnologia.alt" class="img-fluid " style="max-height: 100px;">
         <p>{{ tecnologia.nombre }}</p>
       </div>
     </div>
