--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -9,7 +9,7 @@
       <div class="row mb-5">
         <div class="col-lg-3 d-flex justify-content-center align-items-center">
           <a [href]="empresa.web" target="_blank" class="text-center img-fluid w-50">
-            <img [src]="empresa.src" [alt]="empresa.alt" class="img-fluid ampliar-logo">
+            <img [src]="'https://res.cloudinary.com/dtdfno067/image/upload/v1739718297/portfolio/empresas/' + empresa.alt" [alt]="empresa.alt" class="img-fluid ampliar-logo">
           </a>
         </div>
         <div class="col-lg-9">
