--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -25,7 +25,7 @@
   </div>
     <ng-template #noEducaciones>
       <div class="text-center text-light p-5 lead display-6">
-        <p>No hay datos de educación disponibles.</p>
+        <p>{{ englishActive() ? 'There is no education data available.' : 'No hay datos de educación disponibles.' }}</p>
       </div>
     </ng-template>
   <hr class="w-75 mt-5 m-auto border-3 border-white">
