--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -25,7 +25,7 @@
   </div>
     <ng-template #noEmpresas>
       <div class="text-center text-light p-5 lead display-6">
-        <p>No hay datos de experiencia disponibles.</p>
+        <p>{{ englishActive() ? 'There is no experience data available.' : 'No hay datos de experiencia disponibles.' }}</p>
       </div>
     </ng-template>
   <hr class="w-75 mt-5 m-auto border-3 border-white">
