Actualizada y simplificada tarjeta de contacto.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,17 +11,16 @@
       </div>
       <div class="pt-2 d-none d-lg-block lead">
         <p>
-          <i class="mr-2 fas fa-envelope"></i>Email:
-          <a href="mailto:sanzadrian@hotmail.es">{{email}}</a>
+         <a href="mailto:sanzadrian@hotmail.es"><i class="mr-2 fas fa-envelope"></i>{{email}}</a>
         </p>
-        <p>
-          <i class="mr-2 fab fa-linkedin"></i>Linkedin:
-          <a href="https://www.linkedin.com/in/sanzadrian" target="_blank">linkedin.com/in/sanzadrian</a>
-        </p>
-        <p>
-          <i class="mr-2 fab fa-github"></i>GitHub:
-          <a href="https://github.com/adrianssanz" target="_blank">github.com/adrianssanz</a>
-        </p>
+        <div class="d-flex justify-content-center gap-4">
+          <p>
+            <a href="https://www.linkedin.com/in/sanzadrian" target="_blank"><i class="mr-2 fab fa-linkedin"></i>Adrián Sanz</a>
+          </p>
+          <p>
+            <a href="https://github.com/adrianssanz" target="_blank"><i class="mr-2 fab fa-github"></i>adrianssanz</a>
+          </p>
+        </div>
       </div>
       <div class="justify-content-center mt-4 gap-5 d-flex d-lg-none mb-2">
         <a class="h1 text-light ampliar" href="mailto:sanzadrian@hotmail.es" target="_blank">
