--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-/*
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-*/
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&display=swap');
+
+html, body {
+  height: 100%;
+  margin: 0;
+  font-family: 'Atkinson Hyperlegible', sans-serif;
+}
 
 .ampliar {
   transition: all 0.5s ease;
