Añadido logo superior izquierdo y movido boton de idiomas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,5 +21,6 @@
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Flag_of_the_United_Kingdom_%283-5%29.svg/640px-Flag_of_the_United_Kingdom_%283-5%29.svg.png
   " alt="Bandera del Reino Unido" width="30" height="30" class="rounded-circle" style="object-fit: cover;">
 </a>
+<img  src="assets/icono.png" width="90" alt="Icono" class="logo">
 <div class="cursor-glow" [ngStyle]="{'left.px': x, 'top.px': y}"></div>
 <div class="cursor-glow2" [ngStyle]="{'left.px': x, 'top.px': y}"></div>
