--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -54,11 +54,18 @@
 .idioma {
   position: absolute;
   top: 15px;
-  left: 10px;
+  right: 10px;
   font-size: 18px;
   padding: 10px 20px;
   cursor: pointer;
   z-index: 1000;
+}
+
+.logo {
+  position: absolute;
+  top: 10px;
+  left: 7px;
+  padding: 10px 20px;
 }
 
 .volver-arriba.visible {
