--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
     <div class="col-lg-6 d-flex justify-content-center text-center flex-column py-lg-5">
       <div>
         <h1 class="display-1">Adrián Sanz</h1>
-        <h2 class="display-6">{{ englishActive() ? 'Full-Stack Developer' : 'Desarrollador Full-Stack' }}</h2>
+        <h2 class="display-6">{{ englishActive() ? 'FullStack Developer' : 'Desarrollador FullStack' }}</h2>
         <h3>{{ englishActive() ? 'Madrid, Spain.' : 'Madrid, España.' }}</h3>
       </div>
       <div class="pt-2 d-none d-lg-block lead">
