Modificados margenes superiores

--- a/src/app/layout/estructura/estructura.component.html
+++ b/src/app/layout/estructura/estructura.component.html
@@ -1,7 +1,9 @@
-<app-header></app-header>
-<app-sobre-mi></app-sobre-mi>
-<app-tecnologias></app-tecnologias>
-<app-proyectos></app-proyectos>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
-<app-footer></app-footer>
+<div class="mt-4">
+    <app-header></app-header>
+    <app-sobre-mi></app-sobre-mi>
+    <app-tecnologias></app-tecnologias>
+    <app-proyectos></app-proyectos>
+    <app-experiencia></app-experiencia>
+    <app-educacion></app-educacion>
+    <app-footer></app-footer>
+</div>
