--- a/src/app/layout/layout-proyectos/layout-proyectos.component.html
+++ b/src/app/layout/layout-proyectos/layout-proyectos.component.html
@@ -1,4 +1,4 @@
-<div class="min-vh-100 d-flex flex-column">
+<div class="min-vh-100 mt-5 d-flex flex-column">
   <div class="d-flex flex-column align-items-center justify-content-center text-light p-5">
     <h2 class="display-3">{{ englishActive() ? 'My Projects' : 'Mis Proyectos'}}</h2>
     <a routerLink="/" class="volver-inicio text-decoration-none mt-3">{{ englishActive() ? 'Back to home' : 'Volver al inicio'}}</a>
