--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <div class="row m-5 text-light w-75 m-auto">
     <div class="col-lg-6 d-flex justify-content-center align-items-center py-5">
-      <img src="./assets/perfil.jpg" alt="Adrián Sanz" class="w-50 rounded-circle">
+      <img src="./assets/perfil.jpg" alt="Adrián Sanz" class="w-50 rounded-circle border border-white border-5">
     </div>
     <div class="col-lg-6 d-flex justify-content-center text-center flex-column py-lg-5">
       <div>
