--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -51,7 +51,7 @@
         </div>
         <!-- VER EL RESTO DE PROYECTOS -->
         <div class="col-12 text-center mt-4">
-          <button routerLink="/projects" class="ver-mas">{{ englishActive() ? 'See all projects' : 'Ver todos los proyectos' }}</button>
+          <button (click)="scrollToTop()" class="ver-mas">{{ englishActive() ? 'See all projects' : 'Ver todos los proyectos' }}</button>
         </div>
       </div>
     </div>
