--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="educacion">
   <div class="row m-5 text-light">
     <div class="offset-lg-2 col-lg-8">
       <h2 class="display-3">{{ englishActive() ? 'Education:' : 'Educación:' }}</h2>
