--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="experiencia">
   <div class="row m-5 text-light">
     <div class="offset-lg-2 col-lg-8">
       <h2 class="display-3">{{ englishActive() ? 'Experience:' : 'Experiencia:' }}</h2>
