--- a/src/app/components/tecnologias/tecnologias.component.html
+++ b/src/app/components/tecnologias/tecnologias.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="tecnologias">
   <div class="row m-5 text-light">
     <div class="offset-lg-2 col-lg-8">
       <h2 class="display-3">{{ englishActive() ? 'Technologies:' : 'Tecnologías:'}}</h2>
